Revision history for Perl extension Parallel::Forker

The contributors that suggested a given feature are shown in [].
	
* Parallel::Forker 1.220 2007/2/2

****	Add use_sig_child method, and accelerate poll.  [Darrell Bishop]

* Parallel::Forker 1.214 2007/2/1

****    Fix hang in applications that call poll without sig_child.
	This broke in 1.212 and 1.213. [Venkataramana Mokkapati]

* Parallel::Forker 1.213 2007/1/28

****    Internal refactoring of poll and wait_all routines.

****    Documentation cleanups. [Darrell Bishop]

* Parallel::Forker 1.212 2007/1/23

****    Extend poll() to allow multiple processes to complete. [Darrell Bishop]
	This means poll() has no return value; the old return was undocumented.

* Parallel::Forker 1.211 2006/10/03

****    Fix kill_tree causing _subprocesses error message

* Parallel::Forker 1.210 2006/05/19

***     Internal reorganization of modules and comments.

* Parallel::Forker 1.202 2006/04/05

****	Remove Schedule::Load dependency.  [Alan Burlison]

* Parallel::Forker 1.201 2006/03/30

***	Add last-run PID number to write_tree output file.  [Jeff Dutton]

***	Fix poll() setting activity with no runnable processes. [Jeff Dutton]

* Parallel::Forker 1.200 2005/10/19

**	First public release.

* Parallel::Forker 1.100 2002/10/27

**	Support running processes when other processes fail.

* Parallel::Forker 1.000 2002/07/26

**	First created

----------------------------------------------------------------------
$Id: Changes 31365 2007-02-02 21:13:24Z wsnyder $
DESCRIPTION: Documentation on change history for this package
----------------------------------------------------------------------

This uses outline mode in Emacs.  See C-h m [M-x describe-mode].

Copyright 2003-2007 by Wilson Snyder.  This program is free software;
you can redistribute it and/or modify it under the terms of either the GNU
Lesser General Public License or the Perl Artistic License.

Local variables:
mode: outline
paragraph-separate: "[ 	\f\n]*$"