@@ -1,5 +1,5 @@
 #!/usr/bin/perl -w
-# $Id: 12_rsh.t 30544 2007-01-23 13:55:35Z wsnyder $
+# $Id: 12_rsh.t 37551 2007-04-27 12:24:35Z wsnyder $
 # DESCRIPTION: Perl ExtUtils: Type 'make test' to test this package
 #
 # Copyright 2003-2007 by Wilson Snyder.  This program is free software;
@@ -27,7 +27,7 @@ a_test();
 sub a_test {
     my $failit = shift;
 
-    my $fork = new Parallel::Forker;
+    my $fork = new Parallel::Forker (use_sig_child=>1);
     $SIG{CHLD} = sub { Parallel::Forker::sig_child($fork); };
     $SIG{TERM} = sub { ok(0); $fork->kill_tree_all('TERM') if $fork; die "Quitting...\n"; };
     $SIG{ALRM} = sub { print "Timeout!\n"; ok(0); $fork->kill_tree_all('TERM') if $fork; die "Timeout...\n"; };
